<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.codingpizza.todoapp.presentation.todolist.ListFragment"
        android:label="@string/list_fragment_title"
        tools:layout="@layout/list_fragment">
        <action
            android:id="@+id/action_listFragment_to_createTodoFragment"
            app:destination="@id/createTodoFragment" />
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/createTodoFragment"
        android:name="com.codingpizza.todoapp.presentation.createtodo.CreateTodoFragment"
        android:label="@string/create_todo_fragment_title"
        tools:layout="@layout/create_todo_fragment" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.codingpizza.todoapp.presentation.detailTodo.DetailFragment"
        android:label="@string/edit_note_title"
        tools:layout="@layout/detail_fragment">
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
</navigation>